codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__apply_patch_declined_accepting_revision.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 7580
expression: rendered
---
• Accepting revision
