codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_patch_notes.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 7041
expression: terminal.backend().vt100().screen().contents()
---


  Would you like to make the following edits?

  Reason: The model wants to apply changes

  README.md (+2 -0)

    1 +hello
    2 +world

    1. Yes, proceed
    2. Yes, and don't ask again for these files
  › 3. No, and tell Codex what to do differently
  enter to send | tab to go back | esc to interrupt

  › split the edits into smaller commits
