codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__realtime_queue_shortcut_pending_preview.snap
---
source: tui/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---

• Working (0s • esc to interrupt)

• Queued follow-up messages
  ↳ queued via realtime
    ⌥ + ↑ edit last queued message

› Ask Codex to do anything

  gpt-5.4 · /Users/pbakkum/code/codex
