codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__realtime_recording_meter_footer.snap
---
source: tui/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---


• Working (0s • esc to interrupt)


› draft while realtime is live

  realtime ⡿⣷⣄⠄ · gpt-5.4 · /Users/pbakkum/code/codex
