codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__realtime_typed_text_submission.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 10372
expression: "lines_to_single_string(&inserted[0])"
---

› typed via realtime
