codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__thread_jobs_popup_keeps_selected_job_prompt_visible.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Thread jobs
  Review a job, then press Enter to delete it.

› 1. @after-turn  Give me a random animal name.
                  Press Enter to delete this job.

  Press enter to confirm or esc to go back
